# open-gui-etl

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  sample.env
jobs/sample_job/: run.py
pipeline_gui_builder/: main.py
pipeline_gui_builder/constants/: block_definitions.py
pipeline_gui_builder/generator/: script_generator.py
pipeline_gui_builder/web/: app.js  index.html  style.css
utils/: data_management.py  file_management.py  gDrive_utils.py  logs_management.py  rabbitmq_utils.py  runner.py  s3_utils.py
